--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,217 +1,349 @@
-body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 34px;
-  color: #777;
-  background: url("../images/concrete_seamless.png");
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* general */
+/***************************************
+	  Shared CSS across Entire Site
+****************************************/
 
 .container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  clear: both;
+	height: 100%;
 }
 
-h1,
-h2,
-h3,
-p {
-  margin-bottom: 20px;
+a {
+	color: #777777;
+	text-decoration: none;
 }
 
-p:last-child {
-  margin-bottom: 0;
+a:visited {
+	color: #777777;
 }
 
-h1,
-h2,
-h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-weight: 700;
-  color: #4aaaa5;
+a:hover {
+	color: #4c4b4b;
+	text-decoration: none;
 }
 
-h1 {
-  padding-bottom: 20px;
-  font-size: 30px;
-  line-height: 49px;
-  border-bottom: 3px solid #ddd;
+.navbar-toggle .icon-bar {
+    width: 30px;
+    height: 1px;
 }
 
-h2,
-h3 {
-  font-size: 22px;
+.navbar-header {
+	text-align: center;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-/* header */
-
-#masthead {
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  margin: 0 0 30px;
-  overflow: auto;
-  color: #fff;
-  background: #fff;
-  border-bottom: 2px solid #ccc;
+.navbar-header span {
+    padding: 2px;
+    font-size: 1.05em;
 }
 
-#logo {
-  float: left;
-  width: 250px;
-  height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 90px;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  background: #4aaaa5;
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
 }
 
-nav {
-  float: right;
-  margin-top: 25px;
+.navbar-default {
+    background-color: #4aaaa5;
+    border-color: #e7e7e7;
 }
 
-nav a {
-  display: inline-block;
-  padding-left: 15px;
-  margin-left: 15px;
-  line-height: 18px;
-  color: #999;
-  text-decoration: none;
-  border-left: 1px solid #efefef;
+.navbar-default .navbar-brand {
+    color: #fff;
+    font-size: 2.0em;
+    text-align: center;	
+    padding: 15px 50px;
+    float: none;
 }
 
-nav a:first-child {
-  border-left: 0 none;
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
 }
 
-/* footer */
-
-footer {
-  padding: 30px 0;
-  clear: both;
-  font-size: 12px;
-  color: #fff;
-  color: #ccc;
-  text-align: center;
-  background: #666;
-  border-top: 8px solid #4aaaa5;
-  height: 50px;
+#connect {
+	margin: 35px 13% 35px 13%;
+	height: 160px;
+	background: #fff;
+	text-align: center;
 }
 
-h3, h2 {
-  padding-bottom: 20px;
-  margin-bottom: 15px;
-  line-height: 22px;
-  border-bottom: 2px solid #eee;
+#connect h3 {
+	font-size: 1.7em;
+	font-weight: bold;
+	padding: 15px 0px 0px 15px;
+	color: #4aaaa5;
 }
 
-/* main */
-
-#main-container {
-  padding-top: 130px;
-  min-height: calc(100vh - 70px);
+#connect hr {
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
-.main-section {
-  float: left;
-  width: 100%;
-  max-width: 960px;
-  padding: 30px;
-  margin: 0 0 40px;
-  background: #fff;
-  border: 1px solid #ddd;
+#connect img {
+	margin: 0px 3px 0px 3px;
+    height: 54px;
 }
 
-/* portfolio page */
-
-.work {
-  position: relative;
-  float: left;
-  width: 274px;
-  margin: 20px 0 25px;
-  overflow: auto;
+#footer {
+	background: #666666;
+    height: 70px;
+    text-align: center;
+    line-height: 70px;
+    color: #fff;
+    border-top: 2px solid #4aaaa5;
 }
 
-.work:nth-child(even) {
-  margin-right: 40px;
+/***************************************
+		       INDEX.HTML
+****************************************/
+
+#about {
+	margin: 15px 13% 35px 13%;
+	background: #fff;
 }
 
-.work img {
-  width: 100%;
-  border: 0 none;
-  opacity: 0.8;
+#about h2 {
+	font-size: 1.7em;
+	font-weight: bold;
+	padding: 15px 0px 0px 15px;
+	color: #4aaaa5;
 }
 
-.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 0;
-  font-weight: 300;
-  line-height: 30px;
-  color: #fff;
-  text-align: center;
-  background: #4aaaa5;
-  border-bottom: 0;
+#about hr {
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
-.auth-image {
-  float: left;
-  width: 200px;
-  height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
+#about img {
+	width: 85%;
+	height: 85%;
+	margin: 10px 7.5% 0px 7.5%;	
 }
 
-/* contact page */
-
-#contact-form ul {
-  margin-bottom: 20px;
+#about p {
+	line-height: 150%;
+	margin-left: 15px;
+	margin-right: 15px;
+	padding-top: 10px;
+	text-align: justify; 
 }
 
-#contact-form li {
-  margin-bottom: 10px;
+/***************************************
+		      PORTFOLIO.HTML
+****************************************/
+
+ul {
+	padding: 0px;
 }
 
-label,
-input[type=text],
-input[type=email],
-textarea {
-  display: block;
-  width: 100%;
+#portfolio {
+	margin: 35px 13% 35px 13%;
+	background: #fff;
+	overflow: auto;
 }
 
-input[type=text],
-input[type=email],
-textarea {
-  height: 35px;
-  padding: 0 10px;
-  font-size: 14px;
-  border: 1px solid #ddd;
+#portfolio h2 {
+	font-size: 1.7em;
+	font-weight: bold;
+	padding: 0px 0px 0px 15px;
+	color: #4aaaa5;
 }
 
-textarea {
-  height: 200px;
+#portfolio hr {
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
-input[type=submit] {
-  padding: 10px 30px;
-  font-size: 18px;
-  color: #fff;
-  cursor: pointer;
-  background: #4aaaa5;
-  border: 0 none;
+#portfolio li {
+	list-style: none;
+	width: 90%;
+	height: 200px;
+	margin: 15px 5% 20px 5%;
 }
+
+#portfolio img {
+	width: 100%;
+	height: 100%;
+}
+
+.portLabel {
+	color: #fff;
+	background-color: #4aaaa5;
+	line-height: 40px;
+	text-align: center;
+	position: relative;
+	bottom: 53px;
+
+}
+
+/***************************************
+		      CONTACT.HTML
+****************************************/
+
+#contact {
+	margin: 35px 13% 35px 13%;
+	background: #fff;
+}
+
+#contact h2 {
+	font-size: 1.7em;
+	font-weight: bold;
+	padding: 15px 0px 0px 15px;
+	color: #4aaaa5;
+}
+
+#contact hr {
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+#contact form {
+	margin-left: 15px;
+	color: #777777;
+}
+
+#contact form input {
+	color: #777777;
+	width: 97%;
+	margin-bottom: 10px;
+	margin-top: 3px;
+}
+
+#contact span {
+	font-size: 1.1em;
+}
+
+#name {
+	height: 30px;
+	margin-bottom: 5px;
+}
+
+#name[type=text] {
+	padding-left: 5px;
+	font-size: 13px; 
+	opacity: 0.7;
+}
+
+#email[type=text] {
+	padding-left: 5px; 
+	font-size: 13px;
+	opacity: 0.7;
+}
+
+#message[type=text] {
+	line-height: 0px;
+}
+
+#email {
+	height: 30px;
+	margin-bottom: 5px;	
+}
+
+#message {
+	height: 185px;
+	margin-bottom: 10px;
+}
+
+#submit[type=submit] {
+	color: #fff;
+	width: 70px;
+ 	height: 30px;
+ 	background: #4aaaa5;
+ 	border: none;
+ 	margin-top: 5px;
+ 	border-radius: 2px;
+ 	font-size: 13px;
+}
+
+#submit:hover {
+	cursor: pointer;
+	background-color: #3a8783;
+}
+
+/***************************************
+		      RESPONSIVE
+****************************************/
+
+@media (min-width: 560px) {
+
+		/*TABLET*/
+
+	#about {
+		margin: 15px 0% 15px 10%;
+    	width: 80%;
+	}
+
+	#about img {
+		width: 45%;;
+		margin: 5px 18px 20px 18px;
+		float: left;
+	}
+
+	#about p {
+		padding: 0px;
+	}
+
+	#connect {
+		width: 80%;
+		margin: 15px 0% 15px 10%;
+		height: 160px;
+	}
+
+	#connect h3 {
+		padding: 0px 0px 0px 15px;
+	}
+
+	#contact {
+		margin: 15px 0% 15px 10%;
+    	width: 80%;
+	}
+
+	#portfolio {
+		margin: 15px 0% 15px 10%;
+    	width: 80%;
+	}
+
+	#portfolio li {
+		width: 45%;
+	    margin: 10px 0px 10px 20px;
+	    float: left;
+	}
+
+	#footer {
+		width: 90%;
+	    margin-left: 5%;
+	    border-radius: 5px;
+	}
+
+
+}
+
+		/*DESKTOP*/
+
+@media (min-width: 992px) {
+
+	#about {
+		margin: 15px -6% 60px 10%;
+    	width: 50%;
+	}
+
+	#connect {
+		width: 25%;
+	}
+
+	#contact {
+    	width: 50%;
+    	margin: 15px -6% 50px 10%;
+
+	}
+
+	#portfolio {
+    	width: 50%;
+    	margin: 15px -6% 60px 10%;
+
+	}
+
+	#portfolio li {
+		width: 45%;
+	}
+
+	#footer {
+		width: 100%;
+	    border-radius: 3px;
+	}
