--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,349 +1,203 @@
-/***************************************
-	  Shared CSS across Entire Site
-****************************************/
+* {
+	box-sizing: border-box;
+}
 
-.container {
-	height: 100%;
+body {
+	color: #777777;
+	background-color: #ffffff;
+	border-color: #dddddd;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	background-image: url("../images/concrete_seamless.png");
+	line-height: 150%;
+}
+
+footer {
+	/*position: fixed;*/
+	bottom: 0;
+	color: #cccccc;
+	background-color: #666666;
+	border-top: 5px solid;
+	border-top-color: #4aaaa5;
+    height: 70px;
+    width: 100%;
+	text-align: center;
+	font-size: 16px;
+	padding-top: 20px;
+}
+
+hr {
+	border: none;
+	background-color: #666666;
+	height: 1px;
 }
 
 a {
-	color: #777777;
-	text-decoration: none;
+	text-decoration:  none;
 }
-
-a:visited {
-	color: #777777;
-}
-
-a:hover {
-	color: #4c4b4b;
-	text-decoration: none;
-}
-
-.navbar-toggle .icon-bar {
-    width: 30px;
-    height: 1px;
-}
-
-.navbar-header {
-	text-align: center;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-.navbar-header span {
-    padding: 2px;
-    font-size: 1.05em;
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: #fff;
-}
-
-.navbar-default {
-    background-color: #4aaaa5;
-    border-color: #e7e7e7;
-}
-
-.navbar-default .navbar-brand {
-    color: #fff;
-    font-size: 2.0em;
-    text-align: center;	
-    padding: 15px 50px;
-    float: none;
-}
-
-.navbar-default .navbar-nav>li>a {
-    color: #fff;
-}
-
-#connect {
-	margin: 35px 13% 35px 13%;
-	height: 160px;
-	background: #fff;
-	text-align: center;
-}
-
-#connect h3 {
-	font-size: 1.7em;
-	font-weight: bold;
-	padding: 15px 0px 0px 15px;
-	color: #4aaaa5;
-}
-
-#connect hr {
-	margin-left: 15px;
-	margin-right: 15px;
-}
-
-#connect img {
-	margin: 0px 3px 0px 3px;
-    height: 54px;
-}
-
-#footer {
-	background: #666666;
-    height: 70px;
-    text-align: center;
-    line-height: 70px;
-    color: #fff;
-    border-top: 2px solid #4aaaa5;
-}
-
-/***************************************
-		       INDEX.HTML
-****************************************/
-
-#about {
-	margin: 15px 13% 35px 13%;
-	background: #fff;
-}
-
-#about h2 {
-	font-size: 1.7em;
-	font-weight: bold;
-	padding: 15px 0px 0px 15px;
-	color: #4aaaa5;
-}
-
-#about hr {
-	margin-left: 15px;
-	margin-right: 15px;
-}
-
-#about img {
-	width: 85%;
-	height: 85%;
-	margin: 10px 7.5% 0px 7.5%;	
-}
-
-#about p {
-	line-height: 150%;
-	margin-left: 15px;
-	margin-right: 15px;
-	padding-top: 10px;
-	text-align: justify; 
-}
-
-/***************************************
-		      PORTFOLIO.HTML
-****************************************/
 
 ul {
-	padding: 0px;
+	list-style-type: disc;
+	list-style-position: outside;
+	padding-left: 30px;
+	margin: 10px 0;
 }
 
-#portfolio {
-	margin: 35px 13% 35px 13%;
-	background: #fff;
-	overflow: auto;
+.mycontent {
+	min-height: calc(100vh - 70px);		/* 70px is height of footer */
 }
 
-#portfolio h2 {
-	font-size: 1.7em;
+.myheader {
+	background-color: #ffffff;
+	/*text-align: center;*/
+	padding: 2px;
+	border-bottom: 1px solid;
+	border-bottom-color: #666666
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.mynavbar {
+	border: 0;
+	margin-bottom: 0;
+}
+
+.mysection {
+	background-color: white;
+	padding: 20px;
+	margin: 10px auto 30px auto;
+}
+
+.myh1, .myh2, .myh3 {
+	display: block;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-weight: bold;
-	padding: 0px 0px 0px 15px;
-	color: #4aaaa5;
 }
 
-#portfolio hr {
-	margin-left: 15px;
-	margin-right: 15px;
-}
-
-#portfolio li {
-	list-style: none;
-	width: 90%;
-	height: 200px;
-	margin: 15px 5% 20px 5%;
-}
-
-#portfolio img {
-	width: 100%;
-	height: 100%;
-}
-
-.portLabel {
-	color: #fff;
+.myh1 {
+	font-size: 2em;
+	color: white !important;
 	background-color: #4aaaa5;
-	line-height: 40px;
-	text-align: center;
-	position: relative;
-	bottom: 53px;
-
+	margin-left: 0 !important;
 }
 
-/***************************************
-		      CONTACT.HTML
-****************************************/
-
-#contact {
-	margin: 35px 13% 35px 13%;
-	background: #fff;
-}
-
-#contact h2 {
-	font-size: 1.7em;
-	font-weight: bold;
-	padding: 15px 0px 0px 15px;
+.myh2 {
+	font-size: 1.5em;
 	color: #4aaaa5;
 }
 
-#contact hr {
-	margin-left: 15px;
-	margin-right: 15px;
+.myh3 {
+	font-size: 1.3em;
+	color: #4aaaa5;
 }
 
-#contact form {
-	margin-left: 15px;
-	color: #777777;
+.myh3 ul  {
+    text-align: center;
 }
 
-#contact form input {
-	color: #777777;
-	width: 97%;
-	margin-bottom: 10px;
-	margin-top: 3px;
+.letsConnect {
+    text-align: center;
 }
 
-#contact span {
-	font-size: 1.1em;
+.hrtop {
+    height: 2px;
 }
 
-#name {
-	height: 30px;
-	margin-bottom: 5px;
+.sideicon {
+	margin: 20px auto;
+   text-align:  center;
+	
 }
 
-#name[type=text] {
-	padding-left: 5px;
-	font-size: 13px; 
-	opacity: 0.7;
+.iconimg {
+	width: 50px;
+	height: 50px;
+	margin: auto 5px;
 }
 
-#email[type=text] {
-	padding-left: 5px; 
-	font-size: 13px;
-	opacity: 0.7;
+#profile-pic {
+	float: left;
+	width: 300px;
+	height: 200px;
+	margin-right: 30px;
 }
 
-#message[type=text] {
-	line-height: 0px;
+.pfgrp {
+	position: relative;
 }
 
-#email {
-	height: 30px;
-	margin-bottom: 5px;	
+.pfimg {
+	width: 270px;
+	height: 190px;
+	margin: 10px auto;
+	z-index: 1;
 }
 
-#message {
-	height: 185px;
-	margin-bottom: 10px;
+.pfbtn {
+	position: absolute;
+	left: 15px;
+	bottom: 20%;	
+	width: 270px;
+	color: white;
+	background-color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-weight: 300;
+	padding: 10px 0;
+	z-index: 2;
+    font-size:  22px;
 }
 
-#submit[type=submit] {
-	color: #fff;
-	width: 70px;
- 	height: 30px;
- 	background: #4aaaa5;
- 	border: none;
- 	margin-top: 5px;
- 	border-radius: 2px;
- 	font-size: 13px;
+.intitle {
+	margin-top: 20px;
 }
 
-#submit:hover {
-	cursor: pointer;
-	background-color: #3a8783;
+.inbox {
+	padding: 5px;
+	width: 100%;
+	border: 1px solid #666666;
 }
 
-/***************************************
-		      RESPONSIVE
-****************************************/
-
-@media (min-width: 560px) {
-
-		/*TABLET*/
-
-	#about {
-		margin: 15px 0% 15px 10%;
-    	width: 80%;
-	}
-
-	#about img {
-		width: 45%;;
-		margin: 5px 18px 20px 18px;
-		float: left;
-	}
-
-	#about p {
-		padding: 0px;
-	}
-
-	#connect {
-		width: 80%;
-		margin: 15px 0% 15px 10%;
-		height: 160px;
-	}
-
-	#connect h3 {
-		padding: 0px 0px 0px 15px;
-	}
-
-	#contact {
-		margin: 15px 0% 15px 10%;
-    	width: 80%;
-	}
-
-	#portfolio {
-		margin: 15px 0% 15px 10%;
-    	width: 80%;
-	}
-
-	#portfolio li {
-		width: 45%;
-	    margin: 10px 0px 10px 20px;
-	    float: left;
-	}
-
-	#footer {
-		width: 90%;
-	    margin-left: 5%;
-	    border-radius: 5px;
-	}
-
-
+.inbox:focus {
+	background-color: #ffee88;
 }
 
-		/*DESKTOP*/
+#subbtn {
+	color: white;
+	background-color: #4aaaa5;
+	padding: 10px 20px;
+}
 
-@media (min-width: 992px) {
-
-	#about {
-		margin: 15px -6% 60px 10%;
-    	width: 50%;
-	}
-
-	#connect {
-		width: 25%;
-	}
-
-	#contact {
-    	width: 50%;
-    	margin: 15px -6% 50px 10%;
-
-	}
-
-	#portfolio {
-    	width: 50%;
-    	margin: 15px -6% 60px 10%;
-
-	}
-
-	#portfolio li {
-		width: 45%;
-	}
-
-	#footer {
+@media screen and (max-width: 992px) {
+	.pfimg {
 		width: 100%;
-	    border-radius: 3px;
+		height: auto;
 	}
+
+	.pfbtn {
+		width: calc(100% - 30px);
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.myheader {
+		background-color: #4aaaa5;	
+	}
+
+	.navbar-toggle {
+		background-color: #ddd;
+	}
+
+	.myh1 {
+		margin-left: 15px !important;
+	}
+
+	.myh1:hover {
+		background-color: #4aaaa5 !important;
+	}
+	
+	#profile-pic {
+		width: 100%;
+		height: auto;
+		margin: 0 0 20px 0;
+	}
+}
+
